[package]
name = "openbounty"
version = "0.1.0"
description = "Decentralized freelance bounty platform on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "openbounty"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
anchor-debug = []
custom-heap = []
custom-panic = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }